--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "flummox": "4.0.0-alpha2",
     "history": "^1.17.0",
     "react": "~0.14.3",
+    "react-dom": "^0.14.3",
     "react-router": "^1.0.3"
   },
   "devDependencies": {
     "babel-core": "^6.3.26",
     "babel-loader": "^6.2.0",
-    "webpack": "^1.12.9"
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "react-hot-loader": "^1.3.0",
+    "webpack": "^1.12.9",
+    "webpack-dev-server": "^1.14.0"
   }
 }
