--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "learn-flummox",
+  "name": "webpack-codesplitting-experiments",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,7 +7,7 @@
     "build": "webpack --progress --colors",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Adi L. Suryadi",
   "license": "MIT",
   "dependencies": {
     "flummox": "4.0.0-alpha2",
